fix db backend issues
Signed-off-by: Nabarun Pal <pal.nabarun95@gmail.com>

--- a/conf/pretalx.cfg
+++ b/conf/pretalx.cfg
@@ -9,12 +9,12 @@ debug = True
 url = http://localhost
 
 [database]
-backend = mysql
+backend = postgresql
 name = pretalx
 user = pretalx
 password = veryunsecureplschange
 host = pretalx-db
-port = 3306
+port = 5432
 
 [mail]
 from = some@email.address
